-Improved: [Video/Audio Converter] Audio track selection accuracy
-Improved: [Video/Audio Converter] FFMpeg encode starting performance
-Fixed: [Video/Audio Converter] Audio index problems with MEncoder
-Fixed: [Video/Audio Converter] Duration information from some mkv files couldn't be extracted
-Fixed: [Video Downloader] Couldn't mux if file name ended/started with space
-Fixed: Reset in trim window didn't work properly
-Updated: Youtube-dl

--4.4.0
-Added: DVD ripper
-Added: [Video/Audio Converter] Max. parallel process count is now 16
-Added: [Video/Audio Converter] An option to send TEncoder to tray while encoding
-Added: [Video/Audio Converter] Improved logs window's performance
-Added: [General] Switching between functions will enable/disable related UI controls
-Fixed: [Video/Audio Converter] MEncoder produced invalid ogg vorbis streams
-Fixed: [Video/Audio Converter] Support for FLAC encoding
-Added: [Video Downloader] Improved progress update performance
-Fixed: [Video Downloader] Couldn't stop batch url adding 
-Fixed: [Video Downloader] "Argument out of range" error while downloading
-Updated: Youtube-dl

--4.3.0
-Added: [Video Downloader] An option to skip download if output file exists and contains audio 
-Added: [Video Downloader] Ability to enter user name and password
-Added: [Video Downloader] An option to disable thumbnail loading
-Added: [Video Downloader] Some interface changes
-Added: [Video Downloader] Improved video downloader starting performance
-Added: [Video/Audio Converter] Re-enabled "Delete unfinished files" option
-Added: [Video/Audio Converter] Moved custom arguments options to "Codec Options" window
-Added: [Video/Audio Converter] When "Direct Copy" is selected as video codec ffmpeg will be used
-Added: [General] Changed default skin to "Web2"
-Fixed: [Video Downloader] Downloaded "M4A DASH" and "WEBM AUDIO" audio files couldn't be played by some players
-Fixed: [Video Downloader] Logs weren't saved and shown properly